# prac

./: Cargo.toml  README.md  README.txt
src/: application.rs  cli.rs  main.rs  time.rs  utils.rs
src/time/: time.pest
