[package]
name = "prac"
authors = ["Henry Merrilees <henry@merrile.es>"]
description = "a utility for a feedback-cycle conducive to immersive practice in a busy world"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/henry-merrilees/prac"
homepage = "https://github.com/henry-merrilees/prac"
keyworks = ["productivity", "cli", "practice"]
categories = ["command-line-utilities"]



[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
skim = "0.10.4"
termsize = "0.1.6"
