[package]
name = "prac"
authors = ["Henry Merrilees <henry@merrile.es>"]
description = "The feedback-oriented utility for a practice-oriented life."
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/henry-merrilees/prac"
homepage = "https://github.com/henry-merrilees/prac"
keywords = ["productivity", "cli", "practice"]
categories = ["command-line-utilities"]



[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
dialoguer = { version = "0.10.4", features = ["completion", "fuzzy-select"] }
dirs = "5.0.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
skim = "0.10.4"
termsize = "0.1.6"
